app/webpacker/src/stylesheets/metronic/css/custom.scss
.selectize-dropdown {
  z-index: 1005 !important;
}

.carousel-indicators,
.carousel-control-next,
.carousel-control-prev {
    filter: invert(100%);
}

// Class to make five column in one row
.col-2dot4,
.col-sm-2dot4,
.col-md-2dot4,
.col-lg-2dot4,
.col-xl-2dot4 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
}
.col-2dot4 {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 20%;
  flex: 0 0 20%;
  max-width: 20%;
}
@media (min-width: 540px) {
  .col-sm-2dot4 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
  }
}
@media (min-width: 720px) {
  .col-md-2dot4 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
  }
}
@media (min-width: 960px) {
  .col-lg-2dot4 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
  }
}
@media (min-width: 1140px) {
  .col-xl-2dot4 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
  }
}

.media .media-body .text-truncate {
  width: 200px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.media .media-body .text-truncate.with-icon {
  width: 140px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.form-control{
  height: 37px;
}

// Custom style of fullcalendar

td.day.has-events.fc-day-top.fc-past {
  z-index: 5;
  position: relative;
}


.fc-row .fc-content-skeleton {
  position: initial !important;
  z-index: 1 !important;
}

.fc-row .fc-bg {
  z-index: 4 !important;
}

.fc-row.fc-week.fc-widget-content {
  position: relative;
}

.selectize-input {
  padding: 6px 6px;
  height: 31.25px;
}

.multi .selectize-input {
  height: auto;
}

.selectize-input > * {
  width: 90%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

@import "~bootstrap/scss/functions";
@import "~bootstrap/scss/variables";
$theme-colors: (
  "primary": #5f6caf,
  "success": #6fb497,
  "info": #52747e,
  "warning": #ffc0ad,
  "danger": #c9485b
);
@import "~bootstrap/scss/bootstrap";

